# EVM-Wallet-Connector

./: .gitignore  Cargo.toml  README.md  fuel-toolchain.toml  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.config/: start-fuel.sh
.github/workflows/: ci.yml
cra-dapp/: package.json  tsconfig.json
cra-dapp/src/: App.css  App.tsx  index.tsx
cra-dapp/src/contracts/: CounterAbi.d.ts  CounterAbi.hex.ts
examples/cra-dapp/: .prettierrc  package.json  tailwind.config.js  tsconfig.json
examples/cra-dapp/src/: App.css  App.tsx  index.css  index.tsx
examples/cra-dapp/src/components/: _account-item.tsx  account.tsx  balance.tsx  button.tsx  counter.tsx  feature.tsx  notification.tsx  transfer.tsx
examples/cra-dapp/src/contracts/: index.ts
examples/cra-dapp/src/contracts/factories/: CounterAbi__factory.ts
examples/cra-dapp/src/hooks/: use-log-events.ts
metamask-predicate/: Cargo.toml  Forc.toml
metamask-predicate/tests/: harness.rs
metamask-script/: Cargo.toml
metamask-script/tests/: harness.rs
sdk/: .gitignore  generatePredicateResources.js  hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
sdk/src/: ConnectorRefactor.ts  EvmWalletConnector.ts  eip-1193.ts  index.ts
sdk/test/: chainConfig.json  demo.test.ts  mockProvider.ts  testConnector.ts  wallet-connector.spec.ts  walletConnector.test.ts
signature-predicate/: Cargo.toml  Forc.toml
signature-predicate/src/: main.sw
signature-predicate/tests/: harness.rs  utils.rs
signature-script/: Cargo.toml  Forc.toml
signature-script/src/: main.sw
signature-script/tests/: harness.rs
signature-verfication/: .gitignore  Cargo.toml  Forc.toml  README.md
signature-verfication/.github/workflows/: ci.yml
signature-verfication/metamask-predicate/: Cargo.toml
signature-verfication/metamask-predicate/tests/utils/: mod.rs
signature-verfication/metamask-script/: Cargo.toml  Forc.toml
signature-verfication/metamask-script/src/: main.sw
signature-verification/: Cargo.toml  README.md
signature-verification/verification-predicate/: Cargo.toml
signature-verification/verification-predicate/tests/utils/: mod.rs
simple-predicate/src/: main.sw
simple-script/: Forc.toml
simple-script/src/: main.sw
tautology-predicate/: Forc.toml  fuel-toolchain.toml
tautology-predicate/src/: main.sw
test-predicate/: index.ts  package.json  pnpm-lock.yaml
