[package]
name = "mm-predicate"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Braqzen <103777923+Braqzen@users.noreply.github.com>"]
license = "Apache-2.0"

[dev-dependencies]
ethers = "2.0"
ethers-core = "2.0"
ethers-signers = "2.0"
fuels = { version = "0.46", features = ["fuel-core-lib"] }
sha3 = "0.10.8"
tokio = { version = "1.12", features = ["rt", "macros"] }
fuel-tx = "0.35.3"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
