[workspace]
members = ["verification-predicate", "verification-script"]
resolver = "2"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
version = "0.1.0"
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/EVM-Wallet-Connector"

[workspace.dependencies]
ethers-core = "2.0"
ethers-signers = "2.0"
fuels = { version = "0.50.1", features = ["fuel-core-lib"] }
fuel-tx = "0.35.3"
tokio = { version = "1.12", features = ["rt", "macros"] }
